syntax = "proto3";

package passwordHasher;

// "directory/;package_name"
option go_package = "/;passwordHasher";

service PasswordHash {
  rpc CreateHash (CreateHashRequest) returns (CreateHashResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message CreateHashRequest {
  string password = 1;
}

message CreateHashResponse {
  string hash = 1;
}

message ValidateRequest {
  string password = 1;
  string hash = 2;
}

message ValidateResponse {
  bool valid = 1;
}
